samples/_failures_safe/1761444152_86fecc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bccfbd54.c: In function ‘main’:
./samples/SAFE/__tmp_bccfbd54.c:150:12: error: missing terminating " character
  150 |     printf("Decompression successful: %.*s
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bccfbd54.c:150:5: error: expected expression at end of input
  150 |     printf("Decompression successful: %.*s
      |     ^~~~~~
./samples/SAFE/__tmp_bccfbd54.c:150:5: error: expected declaration or statement at end of input
